Solved problem with headere overlapping movie card and image dessapearing in Movie component when no trailer available

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,11 +2,7 @@
   height: 750px;
   align-items: center;
   justify-content: center;
-  z-index: 45;
-}
-
-.headerImg {
-  z-index: 45;
+  z-index: 40;
 }
 
 .modal {
