--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -3,11 +3,13 @@
 .popularMovieList {
   width: 100%;
   margin-top: 40rem;
+  z-index: 98;
 }
 .latestMovieList {
   width: 100%;
   margin-top: 5rem;
   margin-bottom: 125px;
+  z-index: 98;
 }
 
 .popularMovieListWrapper {
@@ -19,7 +21,7 @@
 
 .popularMovieCardItem:hover {
   transform: scale(1.5, 2.8);
-  z-index: 99;
+  z-index: 999;
   transition: 0.3s ease-in-out;
   transform-origin: center;
   -webkit-box-shadow: 0px 0px 22px 8px rgba(0, 0, 0, 0.75);
@@ -31,7 +33,7 @@
 
 .latestMovieCardItem:hover {
   transform: scale(1.5, 2.8);
-  z-index: 99;
+  z-index: 999;
   transition: 0.3s ease-in-out;
   transform-origin: center;
   -webkit-box-shadow: 0px 0px 22px 8px rgba(0, 0, 0, 0.75);
@@ -44,6 +46,7 @@
 .popularMovieCardItem:hover img {
   transform: scaleY(0.6);
   margin-top: -24px;
+  z-index: 99;
 }
 .popularMovieCardItem:first-child:hover {
   transform: translateX(29px);
